# Codie

./: .editorconfig  .env.example  .gitignore  .spectral.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cline rules.yml  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  redocly.yaml
src/backend/: .python-version  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  test_upload.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0001_initial_analysis.py
src/backend/app/: __init__.py  main.py
src/backend/app/api/: __init__.py  schemas.py
src/backend/app/api/routers/: analysis.py  auth.py  chat.py  code_review.py  export.py  graph.py  health.py  history.py  (+5 more)
src/backend/app/core/: db.py  metrics.py  rate_limit.py  secret_loader.py  security.py  security_headers.py  settings.py  version.py
src/backend/app/models/: __init__.py  analysis.py  user.py
src/backend/app/services/: ai_analyzer.py  ai_providers.py  code_metrics.py  code_parser.py  code_security.py  complexity_analyzer.py  docker_runner.py  graph_builder.py  local_analyzer.py  refactor_planner.py  report_renderer.py  security_scan.py  smart_suggestions.py  style_model.py  testgen.py
src/backend/tests/: conftest.py
src/backend/tests/backend/: test_complexity.py  test_complexity_js_ts.py  test_db_health.py  test_export_endpoints.py  test_export_reports.py  test_graph_endpoint.py  test_health.py  test_metrics.py  test_rate_limit.py  test_secret_loader.py  test_security.py  test_security_headers.py
(+216 files in other folders)
